Fix style inline

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,65 +4,82 @@
       <div class="card__container__item1">
         <div class="item1__container">
           <img class="item1__image" src="./../../assets/images/image-daniel.jpg">
-          <span style="margin-top: 2px; margin-left: 10px; font-size: 13px;">
+          <span class="item1__span__name">
             Daniel Clifford<br>
-            <span style="color:  hsl(263, 51%, 75%); font-size: 11px; margin-top: -3px;">Verified Graduate</span>
+            <span class="item1__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span style="display: grid; margin-top: 10px; font-size: 16px">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny's worth.</span>
-        <span style="display: grid; margin-top: 10px; font-size: 12px; color: hsl(263, 51%, 75%);">"I was an EMT for many years before I joined the bootcamp. I've been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The nexr 12 weeks was the best - and most grueling - time of my life. Since completing the course, I've successfully switched careers, working as a Software Engineer at a VR startup."</span>
+        <span class="item1__span__title">I received a job offer mid-course, and the subjects I learned were current, if
+          not more so, in the company I joined. I honestly feel I got every penny's worth.</span>
+        <span class="item1__span__description">"I was an EMT for many years before I joined the bootcamp. I've been
+          looking to make a transition and have heard some people who had an amazing experience here. I signed up for
+          the free intro course and found it incredibly fun! I enrolled shortly thereafter. The nexr 12 weeks was the
+          best - and most grueling - time of my life. Since completing the course, I've successfully switched careers,
+          working as a Software Engineer at a VR startup."</span>
       </div>
-      </div>
+    </div>
     <div class="item item2">
       <div class="card__container__item2">
         <div class="item2__container">
           <img class="item2__image" src="./../../assets/images/image-jonathan.jpg">
-          <span style="margin-top: 2px; margin-left: 10px; font-size: 13px;">
+          <span class="item2__span__name">
             Jonathan Walters<br>
-            <span style="color:  hsl(216, 18%, 56%); font-size: 11px; margin-top: -3px;">Verified Graduate</span>
+            <span class="item2__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span style="display: grid; margin-top: 10px; font-size: 16px">The team was very supportive and kept me motivated</span>
-        <span style="display: grid; margin-top: 10px; font-size: 12px; color: hsl(216, 18%, 56%);">"I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments i've made in myself."</span>
+        <span class="item2__span__title">The team was very supportive and kept me motivated</span>
+        <span class="item2__span__description">"I started as a total newbie with virtually no coding skills. I now work
+          as a mobile engineer for a big company. This was one of the best investments i've made in myself."</span>
       </div>
     </div>
     <div class="item item3">
       <div class="card__container__item3">
         <div class="item3__container">
           <img class="item3__image" src="./../../assets/images/image-kira.jpg">
-          <span style="color: hsl(216, 18%, 56%); margin-top: 2px; margin-left: 10px; font-size: 13px;">
+          <span class="item3__span__name">
             Kira Whittle<br>
-            <span style="color:  hsl(216, 18%, 56%); font-size: 11px; margin-top: -3px;">Verified Graduate</span>
+            <span class="item3__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span style="display: grid; margin-top: 10px; font-size: 16px; color: hsl(216, 18%, 56%);">Such a life-changing experience. Highly recommended!</span>
-        <span style="display: grid; margin-top: 10px; font-size: 12px; color: hsl(216, 18%, 56%);">" Before joining the bootcamp, i've never written a line of code. I needed some structure from professionals who can help me learn programming step bt step. I was encouraged to enroll bu a former student of theirs who can only say wonderful things about rhe program. The entire curriculum and staff did not disappoint. They were very hanks-on and i never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, i've often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! "</span>
+        <span class="item3__span__title">Such a life-changing experience. Highly recommended!</span>
+        <span class="item3__span__description">" Before joining the bootcamp, i've never written a line of code. I
+          needed some structure from professionals who can help me learn programming step bt step. I was encouraged to
+          enroll bu a former student of theirs who can only say wonderful things about rhe program. The entire
+          curriculum and staff did not disappoint. They were very hanks-on and i never had to wait long for assistance.
+          The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no
+          tutorial could ever have. In fact, i've often referred to it during interviews as an example of my developent
+          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100%
+          recommend! "</span>
       </div>
     </div>
     <div class="item item4">
       <div class="card__container__item4">
         <div class="item4__container">
           <img class="item4__image" src="./../../assets/images/image-jeanette.jpg">
-          <span style="margin-top: 2px; margin-left: 10px; font-size: 13px;">
+          <span class="item4__span__name">
             Jeanette Harmon<br>
-            <span style="color:  hsl(216, 18%, 56%); font-size: 11px; margin-top: -3px;">Verified Graduate</span>
+            <span class="item4__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span style="display: grid; margin-top: 10px; font-size: 16px; color: hsl(216, 18%, 56%);">An overall wonderful and rewarding experience</span>
-        <span style="display: grid; margin-top: 10px; font-size: 12px; color: hsl(216, 18%, 56%);">"Thank you for the wonderful experience! i now have a job i really enjoy, and make a good living while doing something I love."</span>
+        <span class="item4__span__title">An overall wonderful and rewarding experience</span>
+        <span class="item4__span__description">"Thank you for the wonderful experience! i now have a job i really enjoy,
+          and make a good living while doing something I love."</span>
       </div>
     </div>
     <div class="item item5">
       <div class="card__container__item5">
         <div class="item5__container">
           <img class="item5__image" src="./../../assets/images/image-patrick.jpg">
-          <span style="margin-top: 2px; margin-left: 10px; font-size: 13px;">
+          <span class="item5__span__name">
             Patrick Abrams<br>
-            <span style="color:  white; font-size: 11px; margin-top: -3px;">Verified Graduate</span>
+            <span class="item5__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span style="display: grid; margin-top: 10px; font-size: 16px; color: white">An overall wonderful and rewarding experience</span>
-        <span style="display: grid; margin-top: 10px; font-size: 12px; color: white;">"The Staff seem genuinely concerned about my progress which i Find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as acapable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community smart and amazing preople. "</span>
+        <span class="item5__span__title">An overall wonderful and rewarding experience</span>
+        <span class="item5__span__description">"The Staff seem genuinely concerned about my progress which i Find really
+          refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself
+          as acapable junior developer. The standard is above the rest. You will get the personal attention you need
+          from an incredible community smart and amazing preople. "</span>
       </div>
     </div>
   </div>
