--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,13 +9,8 @@
             <span class="item1__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span class="item1__span__title">I received a job offer mid-course, and the subjects I learned were current, if
-          not more so, in the company I joined. I honestly feel I got every penny's worth.</span>
-        <span class="item1__span__description">"I was an EMT for many years before I joined the bootcamp. I've been
-          looking to make a transition and have heard some people who had an amazing experience here. I signed up for
-          the free intro course and found it incredibly fun! I enrolled shortly thereafter. The nexr 12 weeks was the
-          best - and most grueling - time of my life. Since completing the course, I've successfully switched careers,
-          working as a Software Engineer at a VR startup."</span>
+        <span class="item1__span__title">{{person?.title}}</span>
+        <span class="item1__span__description">{{person?.description}}</span>
       </div>
     </div>
     <div class="item item2">
@@ -27,9 +22,8 @@
             <span class="item2__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span class="item2__span__title">The team was very supportive and kept me motivated</span>
-        <span class="item2__span__description">"I started as a total newbie with virtually no coding skills. I now work
-          as a mobile engineer for a big company. This was one of the best investments i've made in myself."</span>
+        <span class="item2__span__title">{{person?.title1}}</span>
+        <span class="item2__span__description">{{person?.description1}}</span>
       </div>
     </div>
     <div class="item item3">
@@ -41,15 +35,8 @@
             <span class="item3__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span class="item3__span__title">Such a life-changing experience. Highly recommended!</span>
-        <span class="item3__span__description">" Before joining the bootcamp, i've never written a line of code. I
-          needed some structure from professionals who can help me learn programming step bt step. I was encouraged to
-          enroll bu a former student of theirs who can only say wonderful things about rhe program. The entire
-          curriculum and staff did not disappoint. They were very hanks-on and i never had to wait long for assistance.
-          The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no
-          tutorial could ever have. In fact, i've often referred to it during interviews as an example of my developent
-          experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100%
-          recommend! "</span>
+        <span class="item3__span__title">{{person?.title2}}</span>
+        <span class="item3__span__description">{{person?.description2}}</span>
       </div>
     </div>
     <div class="item item4">
@@ -61,9 +48,8 @@
             <span class="item4__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span class="item4__span__title">An overall wonderful and rewarding experience</span>
-        <span class="item4__span__description">"Thank you for the wonderful experience! i now have a job i really enjoy,
-          and make a good living while doing something I love."</span>
+        <span class="item4__span__title">{{person?.title3}}</span>
+        <span class="item4__span__description">{{person?.description3}}</span>
       </div>
     </div>
     <div class="item item5">
@@ -75,11 +61,8 @@
             <span class="item5__span__graduate">Verified Graduate</span>
           </span>
         </div>
-        <span class="item5__span__title">An overall wonderful and rewarding experience</span>
-        <span class="item5__span__description">"The Staff seem genuinely concerned about my progress which i Find really
-          refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself
-          as acapable junior developer. The standard is above the rest. You will get the personal attention you need
-          from an incredible community smart and amazing preople. "</span>
+        <span class="item5__span__title">{{person?.title4}}</span>
+        <span class="item5__span__description">{{person?.description4}}</span>
       </div>
     </div>
   </div>
