--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="master">
-  <div class="container">
-    <div class="item item1 ">
+  <div class="container" *ngIf="person else template">
+    <div class="item item1">
       <div class="card__container__item1">
         <div class="item1__container">
           <img class="item1__image" src="./../../assets/images/image-daniel.jpg">
@@ -67,3 +67,11 @@
     </div>
   </div>
 </div>
+<div style="height: 50px;">
+
+</div>
+
+
+<ng-template #template>
+  <app-loading></app-loading>
+</ng-template>
