--- a/src/app/loading/loading.component.scss
+++ b/src/app/loading/loading.component.scss
@@ -67,6 +67,7 @@
   .container {
     display: grid;
     grid-gap: 20px;
+    margin-top: 0px;
     grid-template-columns: 90%;
     justify-content: center;
   }
